More notes added